--- a/S-Innovations.Azure.TableStorageRepository/S-Innovations.Azure.TableStorageRepository.csproj
+++ b/S-Innovations.Azure.TableStorageRepository/S-Innovations.Azure.TableStorageRepository.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableStorageContext.cs" />
     <Compile Include="TableStorageModelBuilder.cs" />
+    <Compile Include="TraceTimer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
