Added a QueryProvider for Fluent Querys that works with POCO classes.

--- a/S-Innovations.Azure.TableStorageRepository.Test/S-Innovations.Azure.TableStorageRepository.Test.csproj
+++ b/S-Innovations.Azure.TableStorageRepository.Test/S-Innovations.Azure.TableStorageRepository.Test.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTest2.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\S-Innovations.Azure.TableStorageRepository\S-Innovations.Azure.TableStorageRepository.csproj">
