--- a/S-Innovations.Azure.TableStorageRepository/S-Innovations.Azure.TableStorageRepository.csproj
+++ b/S-Innovations.Azure.TableStorageRepository/S-Innovations.Azure.TableStorageRepository.csproj
@@ -76,12 +76,46 @@
     <Compile Include="EntityTypeConfiguration.cs" />
     <Compile Include="ITableStorageContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queryable\Base\Query.cs" />
+    <Compile Include="Queryable\Base\QueryProviderBase.cs" />
+    <Compile Include="Queryable\Base\TypeSystem.cs" />
+    <Compile Include="Queryable\Common\TaskHelper.cs" />
+    <Compile Include="Queryable\Common\TaskHelperExtensions.cs" />
+    <Compile Include="Queryable\Expressions\Infrastructure\ExpressionEvaluator.cs" />
+    <Compile Include="Queryable\Expressions\Infrastructure\ExpressionTranslator.cs" />
+    <Compile Include="Queryable\Expressions\Infrastructure\SerializationExtensions.cs" />
+    <Compile Include="Queryable\Expressions\IQueryTranslator.cs" />
+    <Compile Include="Queryable\Expressions\ITranslationResult.cs" />
+    <Compile Include="Queryable\Expressions\Methods\FirstOrDefaultTranslator.cs" />
+    <Compile Include="Queryable\Expressions\Methods\FirstTranslator.cs" />
+    <Compile Include="Queryable\Expressions\Methods\IMethodTranslator.cs" />
+    <Compile Include="Queryable\Expressions\Methods\MethodTranslatorBase.cs" />
+    <Compile Include="Queryable\Expressions\Methods\SelectTranslator.cs" />
+    <Compile Include="Queryable\Expressions\Methods\SingleOrDefaultTranslator.cs" />
+    <Compile Include="Queryable\Expressions\Methods\SingleTranslator.cs" />
+    <Compile Include="Queryable\Expressions\Methods\TakeTranslator.cs" />
+    <Compile Include="Queryable\Expressions\Methods\WhereTranslator.cs" />
+    <Compile Include="Queryable\Expressions\QueryTranslator.cs" />
+    <Compile Include="Queryable\Expressions\TranslationResult.cs" />
+    <Compile Include="Queryable\Extensions\CloudTableExtensions.cs" />
+    <Compile Include="Queryable\IAsyncQueryProvider.cs" />
+    <Compile Include="Queryable\TableQueryProvider.cs" />
+    <Compile Include="Queryable\Wrappers\CloudTableWrapper.cs" />
+    <Compile Include="Queryable\Wrappers\ICloudTable.cs" />
+    <Compile Include="Queryable\Wrappers\ITableQuery.cs" />
+    <Compile Include="Queryable\Wrappers\TableQueryWrapper.cs" />
+    <Compile Include="TableRepositories\ITableRepository.cs" />
+    <Compile Include="TableRepositories\TablePocoRepository.cs" />
+    <Compile Include="TableRepositories\TableRepository.cs" />
     <Compile Include="TableStorageContext.cs" />
     <Compile Include="TableStorageModelBuilder.cs" />
     <Compile Include="TraceTimer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Queryable\License.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
