--- a/S-Innovations.Azure.TableStorageRepository/S-Innovations.Azure.TableStorageRepository.csproj
+++ b/S-Innovations.Azure.TableStorageRepository/S-Innovations.Azure.TableStorageRepository.csproj
@@ -116,7 +116,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Queryable\License.txt" />
+    <None Include="Queryable\License.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
