--- a/S-Innovations.Azure.TableStorageRepository/S-Innovations.Azure.TableStorageRepository.csproj
+++ b/S-Innovations.Azure.TableStorageRepository/S-Innovations.Azure.TableStorageRepository.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Queryable\Expressions\Methods\WhereTranslator.cs" />
     <Compile Include="Queryable\Expressions\QueryTranslator.cs" />
     <Compile Include="Queryable\Expressions\TranslationResult.cs" />
+    <Compile Include="Queryable\Extensions\AsyncQueryExtensions.cs" />
     <Compile Include="Queryable\Extensions\CloudTableExtensions.cs" />
     <Compile Include="Queryable\IAsyncQueryProvider.cs" />
     <Compile Include="Queryable\TableQueryProvider.cs" />
