--- a/S-Innovations.Azure.TableStorageRepository.Test/S-Innovations.Azure.TableStorageRepository.Test.csproj
+++ b/S-Innovations.Azure.TableStorageRepository.Test/S-Innovations.Azure.TableStorageRepository.Test.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest3.cs" />
     <Compile Include="UnitTest2.cs" />
+    <Compile Include="UnitTest4.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\S-Innovations.Azure.TableStorageRepository\S-Innovations.Azure.TableStorageRepository.csproj">
