first step of transform on key parts added

--- a/S-Innovations.Azure.TableStorageRepository.Test/S-Innovations.Azure.TableStorageRepository.Test.csproj
+++ b/S-Innovations.Azure.TableStorageRepository.Test/S-Innovations.Azure.TableStorageRepository.Test.csproj
@@ -89,6 +89,7 @@
     <Compile Include="UnitTest2.cs" />
     <Compile Include="UnitTest4.cs" />
     <Compile Include="UnitTest5.cs" />
+    <Compile Include="UnitTest6.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\S-Innovations.Azure.TableStorageRepository\S-Innovations.Azure.TableStorageRepository.csproj">
