--- a/S-Innovations.Azure.TableStorageRepository.Test/packages.config
+++ b/S-Innovations.Azure.TableStorageRepository.Test/packages.config
@@ -5,6 +5,8 @@
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net45" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="Serilog" version="1.5.14" targetFramework="net45" />
+  <package id="Serilog.Sinks.Literate" version="1.2.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="6.1.0" targetFramework="net45" />
 </packages>
