--- a/S-Innovations.Azure.TableStorageRepository.Test/Test.csproj
+++ b/S-Innovations.Azure.TableStorageRepository.Test/Test.csproj
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SInnovations.Azure.TableStorageRepository.Test</RootNamespace>
     <AssemblyName>S-Innovations.Azure.TableStorageRepository.Test</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -18,6 +18,7 @@
     <TestProjectType>UnitTest</TestProjectType>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -105,14 +106,24 @@
     <Compile Include="UnitTest6.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
+    <EmbeddedResource Include="intersect.json" />
+    <None Include="packages.config" />
+    <EmbeddedResource Include="test.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\S-Innovations.Azure.TableStorageRepository.Spatial\TableStorageRepository.Spatial.csproj">
+      <Project>{5780a3b3-2820-4ab9-b4b9-2dacf9545a51}</Project>
+      <Name>TableStorageRepository.Spatial</Name>
+    </ProjectReference>
     <ProjectReference Include="..\S-Innovations.Azure.TableStorageRepository\TableStorageRepository.csproj">
       <Project>{6b91bf5b-d535-47ff-99a4-877d53662b5f}</Project>
       <Name>TableStorageRepository</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Spatial.DotSpatial\TableStorageRepository.Spatial.DotSpatial.csproj">
+      <Project>{ab22232f-4642-4988-8e0f-ef4071dcf93b}</Project>
+      <Name>TableStorageRepository.Spatial.DotSpatial</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
