--- a/Spatial.DotSpatial/TableStorageRepository.Spatial.DotSpatial.csproj
+++ b/Spatial.DotSpatial/TableStorageRepository.Spatial.DotSpatial.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="TableStorageRepository.Spatial.DotSpatial.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\S-Innovations.Azure.TableStorageRepository.Spatial\TableStorageRepository.Spatial.csproj">
