fixed name for dependency resolution

--- a/src/S-Innovations.Azure.TableStorageRepository/TableStorageRepository.csproj
+++ b/src/S-Innovations.Azure.TableStorageRepository/TableStorageRepository.csproj
@@ -121,7 +121,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-    <None Include="TableStorageRespository.nuspec" />
+    <None Include="TableStorageRepository.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Queryable\License.txt" />
