TODO: Need to handling tests now to improve quality of the lib. 4.0.0 is considered very unstable

--- a/tests/S-Innovations.Azure.TableStorageRepository.Test/Test.csproj
+++ b/tests/S-Innovations.Azure.TableStorageRepository.Test/Test.csproj
@@ -155,6 +155,8 @@
     <Compile Include="UnitTest5.cs" />
     <Compile Include="UnitTest7.cs" />
     <Compile Include="UnitTest6.cs" />
+    <Compile Include="UnitTest9.cs" />
+    <Compile Include="UnitTest8.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
