--- a/src/S-Innovations.Azure.TableStorageRepository/TableStorageRepository.csproj
+++ b/src/S-Innovations.Azure.TableStorageRepository/TableStorageRepository.csproj
@@ -4,27 +4,23 @@
     <TargetFrameworks>netcoreapp3.1;netstandard2.0</TargetFrameworks>
     <RootNamespace>SInnovations.Azure.TableStorageRepository</RootNamespace>
     <AssemblyName>S-Innovations.Azure.TableStorageRepository</AssemblyName>
-    <Version>5.0.0-pre</Version>
-    <Company>S-Innovations v/Poul K. Sørensen</Company>
+    <Version>6.0.0-pre</Version>
+    <Company>Kjeldager Holding IVS</Company>
     <Authors>Poul K. Sørensen</Authors>
-    <FileVersion>5.0.0.0</FileVersion>
-    <AssemblyVersion>5.0.0.0</AssemblyVersion>
+    <FileVersion>6.0.0.0</FileVersion>
+    <AssemblyVersion>6.0.0.0</AssemblyVersion>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-  </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' != 'netcoreapp3.1'">
-    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.0" />
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />   
   </ItemGroup>
-  
+
   <ItemGroup>
-   
+    <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
   </ItemGroup>
 
 </Project>
